--- a/invest.html
+++ b/invest.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Zyppayxvest | Invest</title>
-
 <style>
 body { margin:0; font-family: Arial, Helvetica, sans-serif; background:#f6f8fb;}
 header { background:#0a1f44;color:#fff;padding:20px;text-align:center;font-size:20px;}
@@ -12,22 +11,34 @@ header { background:#0a1f44;color:#fff;padding:20px;text-align:center;font-size:
 .card { background:#fff;padding:18px;border-radius:12px;margin-bottom:20px;box-shadow:0 4px 12px rgba(0,0,0,0.05);}
 .card h3 { margin:0 0 10px 0; font-size:16px; color:#0a1f44;}
 .card p { margin:4px 0; font-size:14px; color:#666;}
-.card img { width:100%; border-radius:12px; margin-bottom:10px;}
-button { margin-top:10px; padding:12px; background:#00c896; color:#fff; border:none; border-radius:8px; cursor:pointer; font-weight:bold; width:100%;}
+.amount-input { width:100%; padding:10px; margin-top:8px; border-radius:8px; border:1px solid #ddd; font-size:14px;}
+.quick-amounts { display:flex; gap:10px; margin-top:8px;}
+.quick-amounts button { flex:1; padding:10px; border:none; border-radius:8px; background:#00c896; color:#fff; cursor:pointer;}
+button.main-btn { margin-top:10px; padding:12px; background:#0a1f44; color:#fff; border:none; border-radius:8px; cursor:pointer; font-weight:bold; width:100%;}
+.loader-overlay { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.4); justify-content:center; align-items:center; z-index:1000; flex-direction:column;}
+.loader { border:6px solid #f3f3f3; border-top:6px solid #00c896; border-radius:50%; width:50px; height:50px; animation:spin 1s linear infinite;}
+@keyframes spin { 0% { transform:rotate(0deg); } 100% { transform:rotate(360deg); } }
+.success-tick { display:none; color:#00c896; font-size:50px; animation:scaleUp 0.5s forwards; margin-top:10px;}
+@keyframes scaleUp { 0% { transform:scale(0); } 100% { transform:scale(1); } }
 nav { position:fixed; bottom:0; width:100%; background:#fff; border-top:1px solid #ddd; display:flex; justify-content:space-around; padding:10px 0;}
 nav a { text-decoration:none; color:#555; font-size:13px; text-align:center;}
 nav a.active { color:#00c896; font-weight:bold;}
+.timer { font-weight:bold; margin-top:8px; }
+button.disabled { background:#ccc; cursor:not-allowed; color:#fff; }
+button.active { background:#00c896; color:#fff; }
 </style>
-
-<script src="https://js.paystack.co/v1/inline.js"></script>
 </head>
-
 <body>
 
-<header>Choose an Investment Plan</header>
-
+<header>Invest Into Zyppayx</header>
 <div class="container" id="plansContainer">
-  <p>Loading investment plans...</p>
+  <p>Loading investment plan...</p>
+</div>
+
+<div class="loader-overlay" id="loader">
+  <div class="loader"></div>
+  <p style="color:#fff; margin-top:10px;">Processing...</p>
+  <div class="success-tick" id="successTick">&#10003;</div>
 </div>
 
 <nav>
@@ -41,141 +52,164 @@ nav a.active { color:#00c896; font-weight:bold;}
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
 import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-import {
-  getFirestore, collection, getDocs, addDoc, doc,
-  getDoc, updateDoc, query, where, serverTimestamp
-} from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+import { getFirestore, collection, getDocs, addDoc, doc, updateDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
 const firebaseConfig = {
   apiKey: "AIzaSyCQ8TCMUAySwLSBN3-0W1GV4XWateS1rqQ",
   authDomain: "zyppayx-69c54.firebaseapp.com",
-  projectId: "zyppayx-69c54",
-  storageBucket: "zyppayx-69c54.firebasestorage.app",
-  messagingSenderId: "439535581166",
-  appId: "1:439535581166:web:994d1c9f75bd1294ef00ff"
+  projectId: "zyppayx-69c54"
 };
 
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
 
-const PAYSTACK_KEY = "pk_live_d52baea87b2c4e49b110aa5cda32260b33b0cb35";
-
 let currentUserId = "";
-let currentUserEmail = "";
 
-onAuthStateChanged(auth, async (user) => {
-  if (!user) {
-    window.location.href = "login.html";
-    return;
-  }
-
+onAuthStateChanged(auth, async user => {
+  if (!user) { window.location.href = "login.html"; return; }
   currentUserId = user.uid;
-  currentUserEmail = user.email;
-
-  await autoMaturityCheck();
-  loadPlans();
+  loadInvestPage();
 });
 
-/* ================= AUTO MATURITY + CREDIT ================= */
-async function autoMaturityCheck() {
-  const investmentsRef = collection(db, "users", currentUserId, "investments");
-  const q = query(investmentsRef, where("status", "==", "active"));
-  const snap = await getDocs(q);
-
-  const userRef = doc(db, "users", currentUserId);
-  const userSnap = await getDoc(userRef);
-  let balance = userSnap.exists() ? (userSnap.data().balance || 0) : 0;
-
-  const now = Date.now();
-
-  for (const inv of snap.docs) {
-    const data = inv.data();
-    if (!data.createdAt) continue;
-
-    const start = data.createdAt.toDate().getTime();
-    const end = start + (data.duration * 24 * 60 * 60 * 1000);
-
-    if (now >= end) {
-      balance += data.totalReturn;
-
-      await updateDoc(inv.ref, {
-        status: "completed",
-        maturedAt: serverTimestamp()
-      });
-
-      await updateDoc(userRef, {
-        balance: balance
-      });
-
-      await addDoc(collection(db, "users", currentUserId, "activities"), {
-        message: `Investment matured: ₦${data.totalReturn} credited.`,
-        createdAt: serverTimestamp()
-      });
-    }
-  }
+function showLoader(show){
+  const loader = document.getElementById("loader");
+  loader.style.display = show ? "flex" : "none";
+  if(!show) document.getElementById("successTick").style.display="none";
 }
 
-/* ================= LOAD PLANS ================= */
-async function loadPlans() {
-  const plansRef = collection(db, "investmentPlans");
-  const snap = await getDocs(plansRef);
+async function loadInvestPage(){
   const container = document.getElementById("plansContainer");
   container.innerHTML = "";
 
-  if (snap.empty) {
-    container.innerHTML = "<p>No investment plans available.</p>";
-    return;
-  }
+  const plan = {
+    title: "Zyppayx Investment",
+    minAmount: 1000,
+    duration: 7, // days
+    dailyReturn: 100,
+    totalReturn: 700
+  };
 
-  snap.forEach(planDoc => {
-    const plan = planDoc.data();
-    if (plan.status !== "active") return;
+  const card = document.createElement("div");
+  card.className = "card";
+  card.innerHTML = `
+    <h3>${plan.title}</h3>
+    <p>Daily Return: ₦${plan.dailyReturn}</p>
+    <p>Total Return: ₦${plan.totalReturn}</p>
+    <p>Minimum Suggested: ₦${plan.minAmount}</p>
+    <input class="amount-input" placeholder="Enter your amount" type="number" min="${plan.minAmount}" />
+    <div class="quick-amounts">
+      <button>₦${plan.minAmount}</button>
+      <button>₦${plan.minAmount*2}</button>
+      <button>₦${plan.minAmount*5}</button>
+    </div>
+    <p><strong>Account Number:</strong> 9740116304</p>
+    <p><strong>Bank:</strong> Paystack-Titan</p>
+    <p><strong>Account Name:</strong> MOREINFOPAY/Zyppayx</p>
+    <button class="main-btn">Submit Payment</button>
+    <h4 style="margin-top:20px">My Investments</h4>
+    <div id="investmentList"></div>
+  `;
 
-    const card = document.createElement("div");
-    card.className = "card";
-
-    card.innerHTML = `
-      <img src="${plan.image}">
-      <h3>${plan.title}</h3>
-      <p>Duration: ${plan.duration} days</p>
-      <p>Daily Return: ₦${plan.dailyReturn}</p>
-      <p>Total Return: ₦${plan.totalReturn}</p>
-      <p>Minimum Amount: ₦${plan.minAmount}</p>
-      <button>Invest ₦${plan.minAmount}</button>
-    `;
-
-    card.querySelector("button").onclick = () => invest(plan, planDoc.id);
-    container.appendChild(card);
+  const input = card.querySelector(".amount-input");
+  card.querySelectorAll(".quick-amounts button").forEach(btn=>{
+    btn.onclick = ()=>{ input.value = btn.textContent.replace("₦",""); }
   });
-}
 
-/* ================= PAYSTACK INVEST ================= */
-function invest(plan, planId) {
-  PaystackPop.setup({
-    key: PAYSTACK_KEY,
-    email: currentUserEmail,
-    amount: plan.minAmount * 100,
-    currency: "NGN",
-    callback: async () => {
-      await addDoc(collection(db, "users", currentUserId, "investments"), {
-        planId,
-        title: plan.title,
-        amount: plan.minAmount,
+  const btn = card.querySelector(".main-btn");
+  btn.onclick = async ()=>{
+    const amt = Number(input.value);
+    if(!amt || amt < plan.minAmount){ alert(`Enter amount ≥ ₦${plan.minAmount}`); return; }
+
+    showLoader(true);
+    try{
+      await addDoc(collection(db,"users",currentUserId,"investments"),{
+        planId: plan.title,
+        amount: amt,
+        status: "active",
+        duration: plan.duration,
         dailyReturn: plan.dailyReturn,
         totalReturn: plan.totalReturn,
-        duration: plan.duration,
-        status: "active",
         createdAt: serverTimestamp()
       });
+      document.getElementById("successTick").style.display="block";
+      setTimeout(()=>showLoader(false),1500);
+      input.value="";
+      loadUserInvestments(); // refresh investments
+    }catch(e){
+      showLoader(false);
+      alert("Error recording investment. Try again.");
+    }
+  };
 
-      alert("Investment successful!");
-      location.reload();
-    },
-    onClose: () => alert("Payment cancelled")
-  }).openIframe();
+  container.appendChild(card);
+  loadUserInvestments();
+}
+
+// ======= User Investments Countdown =======
+async function loadUserInvestments(){
+  const listDiv = document.getElementById("investmentList");
+  listDiv.innerHTML="";
+  const snap = await getDocs(collection(db,"users",currentUserId,"investments"));
+  snap.forEach(docSnap=>{
+    const inv = docSnap.data();
+    const invId = docSnap.id;
+    const createdAt = inv.createdAt?.toMillis ? inv.createdAt.toMillis() : Date.now();
+    const durationMs = (inv.duration || 0)*24*60*60*1000;
+    const maturityTime = createdAt + durationMs;
+
+    const card = document.createElement("div");
+    card.className="card";
+
+    const title = document.createElement("h4");
+    title.textContent = inv.planId || "Investment";
+    card.appendChild(title);
+
+    const amt = document.createElement("p");
+    amt.textContent = `Amount: ₦${inv.amount}`;
+    card.appendChild(amt);
+
+    const timer = document.createElement("p");
+    timer.className="timer";
+    card.appendChild(timer);
+
+    const withdrawBtn = document.createElement("button");
+    withdrawBtn.textContent="Withdraw";
+    withdrawBtn.className="disabled";
+    withdrawBtn.disabled=true;
+    card.appendChild(withdrawBtn);
+
+    function updateCountdown(){
+      const now = Date.now();
+      const diff = maturityTime - now;
+
+      if(diff <=0){
+        timer.innerHTML="<span class='ready'>Investment matured</span>";
+        withdrawBtn.disabled=false;
+        withdrawBtn.className="active";
+        withdrawBtn.onclick=()=>alert("Withdraw flow here");
+
+        if(inv.status!=="matured"){
+          updateDoc(doc(db,"users",currentUserId,"investments",invId),{
+            status:"matured"
+          });
+        }
+      }else{
+        const d=Math.floor(diff/86400000);
+        const h=Math.floor((diff%86400000)/3600000);
+        const m=Math.floor((diff%3600000)/60000);
+        const s=Math.floor((diff%60000)/1000);
+        timer.innerHTML=`<span class="lock">Locked:</span> ${d}d ${h}h ${m}m ${s}s`;
+      }
+    }
+
+    updateCountdown();
+    setInterval(updateCountdown,1000);
+
+    listDiv.appendChild(card);
+  });
 }
 </script>
 
 </body>
-</html>
+  </html>
