--- a/invest.html
+++ b/invest.html
@@ -15,30 +15,20 @@ header { background:#0a1f44;color:#fff;padding:20px;text-align:center;font-size:
 .quick-amounts { display:flex; gap:10px; margin-top:8px;}
 .quick-amounts button { flex:1; padding:10px; border:none; border-radius:8px; background:#00c896; color:#fff; cursor:pointer;}
 button.main-btn { margin-top:10px; padding:12px; background:#0a1f44; color:#fff; border:none; border-radius:8px; cursor:pointer; font-weight:bold; width:100%;}
-.loader-overlay { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.4); justify-content:center; align-items:center; z-index:1000; flex-direction:column;}
-.loader { border:6px solid #f3f3f3; border-top:6px solid #00c896; border-radius:50%; width:50px; height:50px; animation:spin 1s linear infinite;}
-@keyframes spin { 0% { transform:rotate(0deg); } 100% { transform:rotate(360deg); } }
-.success-tick { display:none; color:#00c896; font-size:50px; animation:scaleUp 0.5s forwards; margin-top:10px;}
-@keyframes scaleUp { 0% { transform:scale(0); } 100% { transform:scale(1); } }
 nav { position:fixed; bottom:0; width:100%; background:#fff; border-top:1px solid #ddd; display:flex; justify-content:space-around; padding:10px 0;}
 nav a { text-decoration:none; color:#555; font-size:13px; text-align:center;}
 nav a.active { color:#00c896; font-weight:bold;}
-.timer { font-weight:bold; margin-top:8px; }
-button.disabled { background:#ccc; cursor:not-allowed; color:#fff; }
-button.active { background:#00c896; color:#fff; }
+.lock { color:#e74c3c; font-weight:bold;}
+.ready { color:#00c896; font-weight:bold;}
+button.disabled { background:#ccc; cursor:not-allowed;}
+button.active { background:#00c896; color:#fff;}
 </style>
 </head>
 <body>
 
-<header>Invest Into Zyppayx</header>
+<header>Choose an Investment Plan</header>
 <div class="container" id="plansContainer">
-  <p>Loading investment plan...</p>
-</div>
-
-<div class="loader-overlay" id="loader">
-  <div class="loader"></div>
-  <p style="color:#fff; margin-top:10px;">Processing...</p>
-  <div class="success-tick" id="successTick">&#10003;</div>
+  <p>Loading investment plans...</p>
 </div>
 
 <nav>
@@ -52,7 +42,7 @@ button.active { background:#00c896; color:#fff; }
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
 import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-import { getFirestore, collection, getDocs, addDoc, doc, updateDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
 const firebaseConfig = {
   apiKey: "AIzaSyCQ8TCMUAySwLSBN3-0W1GV4XWateS1rqQ",
@@ -65,136 +55,93 @@ const auth = getAuth(app);
 const db = getFirestore(app);
 
 let currentUserId = "";
+const selectedAmount = localStorage.getItem("investAmount") || "";
 
 onAuthStateChanged(auth, async user => {
-  if (!user) { window.location.href = "login.html"; return; }
+  if(!user){ window.location.href="login.html"; return; }
   currentUserId = user.uid;
-  loadInvestPage();
+  loadPlans();
 });
 
-function showLoader(show){
-  const loader = document.getElementById("loader");
-  loader.style.display = show ? "flex" : "none";
-  if(!show) document.getElementById("successTick").style.display="none";
-}
-
-async function loadInvestPage(){
+async function loadPlans(){
+  const plansRef = collection(db, "investmentPlans");
+  const snap = await getDocs(plansRef);
   const container = document.getElementById("plansContainer");
-  container.innerHTML = "";
+  container.innerHTML="";
 
-  const plan = {
-    title: "Zyppayx Investment",
-    minAmount: 1000,
-    duration: 7, // days
-    dailyReturn: 100,
-    totalReturn: 700
-  };
+  if(snap.empty){ container.innerHTML="<p>No investment plans available.</p>"; return; }
 
-  const card = document.createElement("div");
-  card.className = "card";
-  card.innerHTML = `
-    <h3>${plan.title}</h3>
-    <p>Daily Return: ₦${plan.dailyReturn}</p>
-    <p>Total Return: ₦${plan.totalReturn}</p>
-    <p>Minimum Suggested: ₦${plan.minAmount}</p>
-    <input class="amount-input" placeholder="Enter your amount" type="number" min="${plan.minAmount}" />
-    <div class="quick-amounts">
-      <button>₦${plan.minAmount}</button>
-      <button>₦${plan.minAmount*2}</button>
-      <button>₦${plan.minAmount*5}</button>
-    </div>
-    <p><strong>Account Number:</strong> 9740116304</p>
-    <p><strong>Bank:</strong> Paystack-Titan</p>
-    <p><strong>Account Name:</strong> MOREINFOPAY/Zyppayx</p>
-    <button class="main-btn">Submit Payment</button>
-    <h4 style="margin-top:20px">My Investments</h4>
-    <div id="investmentList"></div>
-  `;
-
-  const input = card.querySelector(".amount-input");
-  card.querySelectorAll(".quick-amounts button").forEach(btn=>{
-    btn.onclick = ()=>{ input.value = btn.textContent.replace("₦",""); }
-  });
-
-  const btn = card.querySelector(".main-btn");
-  btn.onclick = async ()=>{
-    const amt = Number(input.value);
-    if(!amt || amt < plan.minAmount){ alert(`Enter amount ≥ ₦${plan.minAmount}`); return; }
-
-    showLoader(true);
-    try{
-      await addDoc(collection(db,"users",currentUserId,"investments"),{
-        planId: plan.title,
-        amount: amt,
-        status: "active",
-        duration: plan.duration,
-        dailyReturn: plan.dailyReturn,
-        totalReturn: plan.totalReturn,
-        createdAt: serverTimestamp()
-      });
-      document.getElementById("successTick").style.display="block";
-      setTimeout(()=>showLoader(false),1500);
-      input.value="";
-      loadUserInvestments(); // refresh investments
-    }catch(e){
-      showLoader(false);
-      alert("Error recording investment. Try again.");
-    }
-  };
-
-  container.appendChild(card);
-  loadUserInvestments();
-}
-
-// ======= User Investments Countdown =======
-async function loadUserInvestments(){
-  const listDiv = document.getElementById("investmentList");
-  listDiv.innerHTML="";
-  const snap = await getDocs(collection(db,"users",currentUserId,"investments"));
-  snap.forEach(docSnap=>{
-    const inv = docSnap.data();
-    const invId = docSnap.id;
-    const createdAt = inv.createdAt?.toMillis ? inv.createdAt.toMillis() : Date.now();
-    const durationMs = (inv.duration || 0)*24*60*60*1000;
-    const maturityTime = createdAt + durationMs;
+  snap.forEach(planDoc=>{
+    const plan = planDoc.data();
+    if(plan.status!=="active") return;
 
     const card = document.createElement("div");
     card.className="card";
 
-    const title = document.createElement("h4");
-    title.textContent = inv.planId || "Investment";
-    card.appendChild(title);
+    card.innerHTML=`
+      <h3>${plan.title}</h3>
+      <p>Duration: ${plan.duration} days</p>
+      <p>Daily Return: ₦${plan.dailyReturn}</p>
+      <p>Total Return: ₦${plan.totalReturn}</p>
+      <p>Minimum Amount: ₦${plan.minAmount}</p>
+      <input class="amount-input" type="number" min="${plan.minAmount}" placeholder="Enter amount" value="${selectedAmount}">
+      <div class="quick-amounts">
+        <button>₦${plan.minAmount}</button>
+        <button>₦${plan.minAmount*2}</button>
+        <button>₦${plan.minAmount*5}</button>
+      </div>
+      <button class="main-btn">Invest</button>
+    `;
 
-    const amt = document.createElement("p");
-    amt.textContent = `Amount: ₦${inv.amount}`;
-    card.appendChild(amt);
+    const input = card.querySelector(".amount-input");
+    card.querySelectorAll(".quick-amounts button").forEach(btn=>{
+      btn.onclick=()=>{ input.value = btn.textContent.replace("₦",""); }
+    });
+
+    // Redirect to manual-payment.html
+    card.querySelector(".main-btn").onclick=()=>{
+      const amt = Number(input.value);
+      if(!amt || amt < plan.minAmount){ alert(`Enter amount ≥ ₦${plan.minAmount}`); return; }
+      localStorage.setItem("investAmount", amt);
+      window.location.href = "manual-payment.html";
+    };
+
+    container.appendChild(card);
+  });
+
+  loadUserInvestments(); // Show pending/active investments
+}
+
+async function loadUserInvestments(){
+  const investmentsRef = collection(db, "users", currentUserId, "investments");
+  const snap = await getDocs(investmentsRef);
+  const container = document.getElementById("plansContainer");
+
+  snap.forEach(invDoc=>{
+    const inv = invDoc.data();
+    if(!inv.duration || !inv.amount) return;
+
+    const maturity = inv.createdAt.toDate().getTime() + (inv.duration*24*60*60*1000);
+    const card = document.createElement("div");
+    card.className="card";
 
     const timer = document.createElement("p");
-    timer.className="timer";
-    card.appendChild(timer);
+    const btn = document.createElement("button");
+    btn.textContent="Withdraw";
+    btn.disabled = true;
+    btn.className="disabled";
 
-    const withdrawBtn = document.createElement("button");
-    withdrawBtn.textContent="Withdraw";
-    withdrawBtn.className="disabled";
-    withdrawBtn.disabled=true;
-    card.appendChild(withdrawBtn);
-
-    function updateCountdown(){
+    function update(){
       const now = Date.now();
-      const diff = maturityTime - now;
-
-      if(diff <=0){
+      const diff = maturity - now;
+      if(diff<=0 && inv.status==="active"){
         timer.innerHTML="<span class='ready'>Investment matured</span>";
-        withdrawBtn.disabled=false;
-        withdrawBtn.className="active";
-        withdrawBtn.onclick=()=>alert("Withdraw flow here");
-
-        if(inv.status!=="matured"){
-          updateDoc(doc(db,"users",currentUserId,"investments",invId),{
-            status:"matured"
-          });
-        }
-      }else{
+        btn.disabled=false;
+        btn.className="active";
+        btn.onclick=()=>alert("Withdraw flow here");
+      } else if(inv.status==="pending"){
+        timer.innerHTML="<span class='lock'>Pending approval</span>";
+      } else {
         const d=Math.floor(diff/86400000);
         const h=Math.floor((diff%86400000)/3600000);
         const m=Math.floor((diff%3600000)/60000);
@@ -203,13 +150,20 @@ async function loadUserInvestments(){
       }
     }
 
-    updateCountdown();
-    setInterval(updateCountdown,1000);
+    setInterval(update,1000);
+    update();
 
-    listDiv.appendChild(card);
+    card.innerHTML=`
+      <h3>${inv.planId}</h3>
+      <p>Amount: ₦${inv.amount}</p>
+      <p>Status: ${inv.status}</p>
+    `;
+    card.appendChild(timer);
+    card.appendChild(btn);
+    container.appendChild(card);
   });
 }
 </script>
 
 </body>
-  </html>
+</html>
