--- a/manual-payment.html
+++ b/manual-payment.html
@@ -2,176 +2,86 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Manual Payment | Zyppayx</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Manual Payment</title>
 
 <style>
-body{
-  margin:0;
-  font-family:Arial,Helvetica,sans-serif;
-  background:#f4f6fa;
-  padding:20px;
-}
-
-h2{
-  text-align:center;
-  margin-bottom:15px;
-}
-
-.card{
-  background:linear-gradient(135deg,#00c896,#0a1f44);
-  color:#fff;
-  border-radius:18px;
-  padding:20px;
-  box-shadow:0 10px 25px rgba(0,0,0,.15);
-}
-
-.card p{
-  margin:12px 0;
-  font-weight:bold;
-  font-size:15px;
-}
-
-.copy{
-  font-size:13px;
-  background:#fff;
-  color:#0a1f44;
-  padding:5px 10px;
-  border-radius:6px;
-  cursor:pointer;
-  display:inline-block;
-  margin-top:4px;
-}
-
-button{
-  width:100%;
-  padding:14px;
-  margin-top:18px;
-  border:none;
-  border-radius:12px;
-  background:#0a1f44;
-  color:#fff;
-  font-weight:bold;
-  font-size:15px;
-}
-
-button:disabled{
-  opacity:.6;
-}
-
-.loader{
-  width:45px;
-  height:45px;
-  border:4px solid #ddd;
-  border-top:4px solid #00c896;
-  border-radius:50%;
-  animation:spin 1s linear infinite;
-  margin:20px auto;
-  display:none;
-}
-
-@keyframes spin{
-  100%{transform:rotate(360deg);}
-}
-
-.success{
-  display:none;
-  text-align:center;
-  font-size:18px;
-  color:#00c896;
-  margin-top:15px;
-}
+body{font-family:Arial;background:#f6f8fb;padding:20px}
+.card{background:#fff;padding:20px;border-radius:14px;max-width:420px;margin:auto;box-shadow:0 4px 12px rgba(0,0,0,.05)}
+p{margin:10px 0}
+.copy{background:#00c896;color:#fff;border:none;padding:5px 8px;border-radius:6px;font-size:12px}
+button.main{width:100%;padding:12px;border:none;border-radius:10px;background:#0a1f44;color:#fff;font-weight:bold;margin-top:15px}
 </style>
 </head>
 
 <body>
 
-<h2>Manual Bank Transfer</h2>
-
 <div class="card">
-  <p>Bank Name<br>Paystack-Titan</p>
-
-  <p>
-    Account Number<br>
-    <span id="acc">9740116304</span><br>
-    <span class="copy" onclick="copyText('acc')">Copy</span>
+  <h3>Manual Investment Payment</h3>
+  <p><b>Bank:</b> Paystack-Titan</p>
+  <p><b>Account Number:</b> <span id="acc">9740116304</span>
+    <button class="copy" onclick="copyText('9740116304')">Copy</button>
   </p>
-
-  <p>Account Name<br>MOREINFOPAY / Zyppayx</p>
-
-  <p>
-    Amount to Pay<br>
-    ₦<span id="amount"></span><br>
-    <span class="copy" onclick="copyText('amount')">Copy</span>
+  <p><b>Account Name:</b> MOREINFOPAY/Zyppayx</p>
+  <p><b>Plan:</b> <span id="plan"></span></p>
+  <p><b>Amount:</b> ₦<span id="amt"></span>
+    <button class="copy" onclick="copyText(amount)">Copy</button>
   </p>
+  <button class="main" id="submit">I Have Paid</button>
 </div>
-
-<button id="submitBtn">I Have Paid</button>
-
-<div class="loader" id="loader"></div>
-<div class="success" id="success">✔ Payment Submitted</div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-import { getFirestore, collection, addDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+import { getAuth,onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+import { getFirestore,doc,getDoc,collection,addDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-const firebaseConfig = {
-  apiKey: "AIzaSyCQ8TCMUAySwLSBN3-0W1GV4XWateS1rqQ",
-  authDomain: "zyppayx-69c54.firebaseapp.com",
-  projectId: "zyppayx-69c54"
-};
-
-const app = initializeApp(firebaseConfig);
-const auth = getAuth(app);
-const db = getFirestore(app);
-
-let uid = "";
-const amount = localStorage.getItem("investAmount") || 0;
-document.getElementById("amount").textContent = amount;
-
-onAuthStateChanged(auth,user=>{
-  if(!user){
-    window.location.href="login.html";
-    return;
-  }
-  uid = user.uid;
+const app=initializeApp({
+  apiKey:"AIzaSyCQ8TCMUAySwLSBN3-0W1GV4XWateS1rqQ",
+  authDomain:"zyppayx-69c54.firebaseapp.com",
+  projectId:"zyppayx-69c54"
 });
+const auth=getAuth(app);
+const db=getFirestore(app);
 
-window.copyText = (id)=>{
-  navigator.clipboard.writeText(document.getElementById(id).innerText);
-  alert("Copied!");
-};
+const params=new URLSearchParams(location.search);
+const planId=params.get("planId");
+const amount=Number(params.get("amount"));
 
-document.getElementById("submitBtn").onclick = async ()=>{
-  if(!uid) return;
+document.getElementById("amt").textContent=amount.toLocaleString();
 
-  document.getElementById("submitBtn").disabled = true;
-  document.getElementById("loader").style.display="block";
+onAuthStateChanged(auth,async user=>{
+  if(!user){location.href="login.html";return;}
 
-  try{
-    await addDoc(collection(db,"users",uid,"investments"),{
-      planId:"Manual Transfer",
-      amount:Number(amount),
-      duration:7,       // you can change later
+  const planSnap=await getDoc(doc(db,"investmentPlans",planId));
+  const plan=planSnap.data();
+  document.getElementById("plan").textContent=plan.title;
+
+  document.getElementById("submit").onclick=async()=>{
+    const totalReturn=amount+(amount*plan.roiPercent/100);
+    const start=Date.now();
+    const end=start+(plan.duration*86400000);
+
+    await addDoc(collection(db,"investments"),{
+      planId,
+      planTitle:plan.title,
+      amount,
+      roiPercent:plan.roiPercent,
+      totalReturn,
+      duration:plan.duration,
+      startDate:start,
+      endDate:end,
       status:"pending",
-      createdAt: serverTimestamp()
+      userId:user.uid,
+      userEmail:user.email,
+      createdAt:Date.now()
     });
 
-    document.getElementById("loader").style.display="none";
-    document.getElementById("success").style.display="block";
+    alert("Investment recorded as pending. Await admin approval.");
+    location.href="invest.html";
+  };
+});
 
-    setTimeout(()=>{
-      window.location.href="invest.html";
-    },2000);
-
-  }catch(err){
-    alert("Something went wrong, try again");
-    document.getElementById("loader").style.display="none";
-    document.getElementById("submitBtn").disabled=false;
-  }
-};
+window.copyText=(t)=>navigator.clipboard.writeText(t);
 </script>
-
 </body>
 </html>
